--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "REST API for techniqueshoppe",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
