--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1599.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "uuid": "^9.0.1"
   }
 }
