--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.556.0",
+    "@aws-sdk/s3-request-presigner": "^3.556.0",
+    "@aws-sdk/util-format-url": "^3.535.0",
     "aws-sdk": "^2.1599.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
