--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.556.0",
+    "@aws-sdk/credential-providers": "^3.556.0",
     "@aws-sdk/s3-request-presigner": "^3.556.0",
     "@aws-sdk/util-format-url": "^3.535.0",
+    "@smithy/hash-node": "^2.2.0",
+    "@smithy/protocol-http": "^3.3.0",
+    "@smithy/url-parser": "^2.2.0",
     "aws-sdk": "^2.1599.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
